# localcull

./: .gitignore  README.md  localcull_grouper.lua  pyproject.toml
benchmarks/: benchmark_aesthetic.py  musiq_benchmark.py
docs/: USER_GUIDE.md
scripts/: analyze_pca_scorers.py  analyze_scorer_overlap.py  vendor_mplug_owl2.py
src/localcull/: __init__.py  __main__.py  checkpoint.py  cli.py  constants.py  localcull_exiftool.config  memory.py  personalization.py  pipeline.py  scorers.py  stage0_ingest.py  stage1_prepare.py  stage2_features.py  stage3_scoring.py  stage4_selection.py  stage6_output.py  types.py
tests/: README.md  conftest.py  test_pipeline.py
